Bug 198779 - Konqueror + jpeg-7 shows images in wrong size
Summary: Konqueror + jpeg-7 shows images in wrong size
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 201331 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-07-03 14:17 UTC by Pierre Schmitz
Modified: 2009-07-24 19:15 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
testcase (38.41 KB, application/gzip)
2009-07-03 14:20 UTC, Pierre Schmitz
Details
testcase (38.41 KB, application/gzip)
2009-07-10 03:45 UTC, Pierre Schmitz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pierre Schmitz 2009-07-03 14:17:50 UTC
Version:            (using Devel)
Compiler:          gcc-Version 4.4.0 20090526 (prerelease) (GCC) 
OS:                Linux
Installed from:    Compiled sources

When compiled with libjpeg-7 Konqueror shows images without any width/height attribute twice as large as it should. This problem does not exist with libjpeg-6b though.

This has been confirmed on Arch Linux with KDE 4.2.4 and 4.2.95.
Comment 1 Pierre Schmitz 2009-07-03 14:20:42 UTC
Created attachment 35018 [details]
testcase

Here is a test case. All images should be of same size. With Konqueror and libjpeg-7 the last one is twice as large as the others.
Comment 2 Marvin 2009-07-08 22:15:29 UTC
*** This bug has been confirmed by popular vote. ***
Comment 3 Pierre Schmitz 2009-07-10 03:45:31 UTC
Created attachment 35214 [details]
testcase

Sorry, my last attachement was somehow broken.
Comment 4 David Rankin 2009-07-13 00:16:02 UTC
This bug is confirmed, My site is hosed looking at it in the new konqueror. Go look at www.3111skyline.com in konqueror and then in some other browser. Here is a screenshot of the broken behavior (reduced to 800 px, still 138k):

http://www.3111skyline.com/download/Archlinux/bugs/kde4/konquerorWebBrwsWhacko.800.jpeg

If for some reason you can't just browse to the site, here is what it looks like correctly:

http://www.3111skyline.com/download/Archlinux/bugs/kde4/konquerorWebBrwsWhacko-ffOK.800.jpeg

The sidebar images are displaye twice as wide as they should be. You can just "View Source" to look at the image urls directly (I know you know that, but just in case...)
Comment 5 Florian Loitsch 2009-07-14 12:29:25 UTC
confirmed with KDE4.2.96. (Archlinux too)
Comment 6 Panos 2009-07-15 19:13:57 UTC
+1. Confirmed with KDE 4.2.96. 

Please fix it as soon as possible.
Comment 7 loft 2009-07-15 22:37:41 UTC
confirmed with KDE 4.2.4 

Please fix this as soon as possible 
Konqueror and every program use khtml don't work anymore
Comment 8 Peter Lewis 2009-07-17 13:01:43 UTC
Yes, this is pretty serious.

As a workaround, you might find that you can use the webkit part instead for most sites. It doesn't suffer from this problem.
Comment 9 Maksim Orlovich 2009-07-17 19:09:02 UTC
I'll try to get this fixed, but there are other things I have to fix before 4.3 as well, and this one pretty much requires me to recompile half of my system.
Comment 10 Maksim Orlovich 2009-07-17 23:09:56 UTC
OK, sorry, but there is no way I can use libjpeg7 on any of my systems, since all the packages they ship require the binary-incompatible 62. So the best I can do is cooperative debugging --- I can provide patches with tons of debug output, and if someone is willing to run/test them for me, I may be able to figure out what's going on.
Comment 11 Maksim Orlovich 2009-07-18 00:31:08 UTC
SVN commit 998545 by orlovich:

Make this work with libjpeg7 as well. Credit to Daniel Winter 
for providing me the information to fix this and testing the fix.

BUG: 198779


 M  +1 -1      jpegloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=998545
Comment 12 Maksim Orlovich 2009-07-18 00:32:30 UTC
SVN commit 998546 by orlovich:

Merged revision:r998545 | orlovich | 2009-07-17 18:31:07 -0400 (Fri, 17 Jul 2009) | 5 lines

Make this work with libjpeg7 as well. Credit to Daniel Winter 
for providing me the information to fix this and testing the fix.

BUG: 198779

 M  +1 -1      jpegloader.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=998546
Comment 13 Maksim Orlovich 2009-07-24 19:15:24 UTC
*** Bug 201331 has been marked as a duplicate of this bug. ***