Make this work with libjpeg7 as well. Credit to Daniel Winter for providing me the information to fix this and testing the fix.

BUG: 198779

svn path=/trunk/KDE/kdelibs/; revision=998545